# 100-knock-workbook_task-resolve-

./: .gitignore  README.md
.devcontainer/: devcontainer.json
src/: main.py  pyproject.toml  setup.py
src/02/: run.ipynb
