[project]
name = "workspaces"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6",
    "ipykernel>=7.1.0",
    "japanize-matplotlib==1.1.3",
    "lightgbm==4.1.0",
    "matplotlib==3.7.1",
    "numpy==1.25.2",
    "pandas==1.5.3",
    "scikit-learn==1.2.2",
    "seaborn==0.13.1",
    "shap==0.44.1",
    "statsmodels==0.14.1",
    "sweetviz==2.3.1",
]
